Changes in version 1.0-12
    * ser_permutation_vectors can now be reversed with rev
    * get_order: removed the weird labels. 
    * we use now testthat

Changes in version 1.0-11
    * service release.

Changes in version 1.0-10
    * pimage has now a colorkey and a range argument
    * fixed bug in ARSA when the distance matrix contains all 0s
    * added PACKAGE argument to .Fortran calls

Changes in version 1.0-8 and 1.0-9
    * get_order: labels are now in the correct order (Bug report by Crt Ahlin)
    * Replaced Fortran I/O with R I/O for verb=TRUE
    * Fixed pop/newpage bug in pimage.dist reported by Bettina Gruen

Changes in version 1.0-7
    * Fixed out-of-bounds bug in arsa.f reported by Rohan Shah
    * Fixed out-of-bounds bug in bburcg.f

Changes in version 1.0-6
    * removed deprecated parameter gamma for dissplot()

Changes in version 1.0-5
    * bertinplot(): fixed representation for 0, neg. values and highlight. 
	(Bug report by G. Sawitzki).
    * bertinplot(): added panel.blocks and option for shading
    * bertinplot(): added bertin_cut_line()

Changes in version 1.0-4
    * pimage() now uses grid.raster.
    * dissplot() now uses grid.raster.

Changes in version 1.0-3
    * improved validity check for permutations and added check for dist with 
	neg. entries to seriate.dist.

Changes in version 1.0-2
    * service release

Changes in version 1.0-1
    * added drop=FALSE in permute for matrix.
    * fixed reordering for labels.
    * added permute for character.
    * added different methods to calculate between cluster 
	dissimilarities (min, max, avg, Hausdorff).
    * dissplot has now additional options hue, power, gamma, flip and 
	changed behavior for averages. dissplot depends now on colorspace.